--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-git+https://github.com/jachym/pywps-4.git@master#egg=pywps-master
 Flask==0.10.1
-itsdangerous==0.23
-Jinja2==2.7.1
-lxml==3.2.3
+itsdangerous==0.24
+Jinja2==2.7.3
+lxml==3.3.3
 MarkupSafe==0.18
-path.py==4.3
-Shapely==1.2.18
-Werkzeug==0.9.3
+Unipath==1.1
+Shapely==1.5.7
+Werkzeug==0.10.4
