fixing execute tests

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -29,8 +29,8 @@ contactinstructions=NONE
 
 [server]
 maxoperations=30
-maxinputparamlength=1024
-maxfilesize=3mb
+maxsingleinputsize=1mb
+maxrequestsize=3mb
 tempPath=/tmp/pywps/
 processesPath=
 outputUrl=/data/
