--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gdal-bin libgdal-dev libgdal1h libgdal1-dev libgeos-dev
+  - sudo apt-get install -qq gdal-bin libgdal-dev libgdal1h libgdal1-dev libgeos-dev python-dev python3-dev
   - pip install GDAL==1.10.0 --global-option=build_ext --global-option="-I/usr/include/gdal"
   - pip install -r requirements.txt
   - git clone https://github.com/jachym/pywps-4.git
