add database logging tests

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -35,6 +35,5 @@ tempPath=/tmp/pywps/
 processesPath=
 outputUrl=/data/
 outputPath=/tmp/outputs/
-debug=true # deprecated since 3.2, use logLevel instead
-logFile=
 logLevel=INFO
+logdatabase=/tmp/outputs/pywps-logs.sqlite3
