--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,7 @@ envlist = py27,py34
 [testenv]
 deps=lxml
      waitress
+     rm
 commands=
+    /bin/rm -f /tmp/outputs/pywps-logs.sqlite3
     python tests/__init__.py
