implementation of maxoperations parametr

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -1,39 +1,36 @@
-[wps]
-encoding=utf-8
-title=PyWPS 4 Server
-version=1.0.0
-abstract=See https://github.com/jachym/pywps-4 and http://www.opengeospatial.org/standards/wps
-fees=NONE
-constraints=NONE
-serveraddress=http://localhost
-serverport=5000
-keywords=GRASS,GIS,WPS
-lang=en-CA
-
-[provider]
-providerName=LIST
-individualName=Calin Ciociu
-positionName=Intern
-role=Developer
-deliveryPoint=Street
-city=Belval
-postalCode=000 00
-country=LU
-electronicMailAddress=login@server.org
-providerSite=http://foo.bar
-phoneVoice=False
-phoneFacsimile=False
-administrativeArea=False
-hoursofservice=00:00-24:00
-contactinstructions=NONE
+[metadata:main]
+identification_title="PyWPS Dev server"
+identification_abstract="PyWPS server deployed for Jachym's testing purposes"
+identification_keywords="WPS,GRASS,PyWPS"
+identification_keywords_type="theme"
+identification_fees=None
+identification_accessconstraints=None
+provider_name=PyWPS Developement team
+provider_url=http://pywps.org/')
+contact_name=Jachym Cepicky
+contact_position=Developer
+contact_address=My Street
+contact_city=Prague
+contact_stateorprovince=None
+contact_postalcode=145 00
+contact_country=Czech republic
+contact_phone=+420 00 23 34 34
+contact_fax=+420 00 23 34 34
+contact_email=info@pywps.org
+contact_url=http://pywps.org
+contact_hours=8:00-20:00
+contact_instructions=Knock on the door
+contact_role=pointOfContact
 
 [server]
-maxoperations=30
 maxsingleinputsize=1mb
 maxrequestsize=3mb
-tempPath=/tmp/pywps/
 processesPath=
-outputUrl=/data/
-outputPath=/tmp/outputs/
+url=http://localhost/pywps
+outputurl=http://localhost/wps/outputs
+outputpath=/var/www/html/wps/outputs
+workdir=/tmp/outputs/
 logLevel=INFO
 logdatabase=/tmp/outputs/pywps-logs.sqlite3
+maxprocesses=30
+parallelprocesses=5
