--- a/pywps.cfg
+++ b/pywps.cfg
@@ -27,7 +27,8 @@ maxsingleinputsize=1mb
 maxrequestsize=3mb
 processesPath=
 url=http://localhost/pywps
-outputurl=http://localhost/wps/outputs
+port=5000
+outputurl=/wps/outputs
 outputpath=/var/www/html/wps/outputs
 workdir=/tmp/outputs/
 logLevel=INFO
