Fixes thanks to documentation

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -1,40 +1,38 @@
 [metadata:main]
-identification_title="PyWPS Dev server"
-identification_abstract="PyWPS server deployed for Jachym's testing purposes"
-identification_keywords="WPS,GRASS,PyWPS"
+identification_title="PyWPS Demo server"
+identification_abstract="PyWPS testing and development server. Do NOT use this server in production environement. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials."
+identification_keywords="WPS,GRASS,PyWPS, Demo, Dev"
 identification_keywords_type="theme"
 identification_fees=None
 identification_accessconstraints=None
 provider_name=PyWPS Developement team
-provider_url=http://pywps.org/')
-contact_name=Jachym Cepicky
+provider_url=http://pywps.org/'
+contact_name=Your Name
 contact_position=Developer
 contact_address=My Street
-contact_city=Prague
+contact_city=My City
 contact_stateorprovince=None
-contact_postalcode=145 00
-contact_country=Czech republic
-contact_phone=+420 00 23 34 34
-contact_fax=+420 00 23 34 34
-contact_email=info@pywps.org
+contact_postalcode=000 00
+contact_country=World, Internet
+contact_phone=+00 00 11 22 33
+contact_fax=+00 99 88 77 66
+contact_email=info@yourdomain.org
 contact_url=http://pywps.org
-contact_hours=8:00-20:00
+contact_hours=8:00-20:00UTC
 contact_instructions=Knock on the door
 contact_role=pointOfContact
 
 [server]
 maxsingleinputsize=1mb
 maxrequestsize=3mb
-processesPath=
-url=http://localhost/pywps
-port=5000
-outputurl=/wps/outputs
-outputpath=/var/www/html/wps/outputs
-workdir=/tmp/outputs/
+url=http://localhost:5000/wps
+outputurl=http://localhost:5000/outputs
+outputpath=outputs
+workdir=workdir
 logLevel=INFO
-logdatabase=/var/log/pywps/pywps.sqlite3
-maxprocesses=30
-parallelprocesses=5
+logdatabase=logs/pywps-logs.sqlite3
+maxprocesses=10
+parallelprocesses=2
 
 [grass]
 gisbase=/usr/local/grass-7.3.svn/
