--- a/pywps.cfg
+++ b/pywps.cfg
@@ -26,7 +26,7 @@ contact_role=pointOfContact
 maxsingleinputsize=1mb
 maxrequestsize=3mb
 url=http://localhost:5000/wps
-outputurl=http://localhost:5000/outputs
+outputurl=http://localhost:5000/outputs/
 outputpath=outputs
 workdir=workdir
 logLevel=INFO
