--- a/pywps.cfg
+++ b/pywps.cfg
@@ -29,7 +29,8 @@ url=http://localhost:5000/wps
 outputurl=http://localhost:5000/outputs/
 outputpath=outputs
 workdir=workdir
-logLevel=INFO
+loglevel=INFO
+logfile=logs/pywps.log
 logdatabase=logs/pywps-logs.sqlite3
 maxprocesses=10
 parallelprocesses=2
