removing " from configuration

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -1,8 +1,8 @@
 [metadata:main]
-identification_title="PyWPS Demo server"
-identification_abstract="PyWPS testing and development server. Do NOT use this server in production environement. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials."
-identification_keywords="WPS,GRASS,PyWPS, Demo, Dev"
-identification_keywords_type="theme"
+identification_title=PyWPS Demo server
+identification_abstract=PyWPS testing and development server. Do NOT use this server in production environement. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials.
+identification_keywords=WPS,GRASS,PyWPS, Demo, Dev
+identification_keywords_type=theme
 identification_fees=None
 identification_accessconstraints=None
 provider_name=PyWPS Developement team
