--- a/pywps.cfg
+++ b/pywps.cfg
@@ -29,11 +29,14 @@ url=http://localhost:5000/wps
 outputurl=http://localhost:5000/outputs/
 outputpath=outputs
 workdir=workdir
-loglevel=INFO
-logfile=logs/pywps.log
-logdatabase=logs/pywps-logs.sqlite3
 maxprocesses=10
 parallelprocesses=2
+
+[logging]
+level=INFO
+file=logs/pywps.log
+database=sqlite:///logs/pywps-logs.sqlite3
+
 
 [grass]
 gisbase=/usr/local/grass-7.3.svn/
