--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ six==1.10.0
 Unipath==1.1
 Werkzeug==0.10.4
 SQLAlchemy==1.0.15
+-e git+https://github.com/geopython/pywps.git@pywps-4.0.0-rc1#egg=pywps-4.0.0-rc1
