--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ Shapely==1.5.7
 Werkzeug==0.10.4
 SQLAlchemy==1.0.15
 psutil==4.3.1
--e git+https://github.com/geopython/pywps.git@pywps-4.0.0rc2#egg=pywps-4.0.0-rc2
+-e git+https://github.com/geopython/pywps.git@master#egg=pywps-master
