--- a/pywps.cfg
+++ b/pywps.cfg
@@ -28,7 +28,7 @@ maxrequestsize=3mb
 url=http://localhost:5000/wps
 outputurl=http://localhost:5000/outputs/
 outputpath=outputs
-workdir=workdir
+workdir=/tmp
 maxprocesses=10
 parallelprocesses=2
 
