First demo with docker

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@ workdir/*
 outputs/*
 logs/*
 
+docker/izolation*
+
 # vim, mac os
 *.sw*
 .DS_Store
 .*.un~
+.idea
 
 # python setup.py build/install artifacts
 build
