--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ git:
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gdal-bin libgdal-dev libgdal1h libgdal1-dev libgeos-dev python-dev python3-dev
-  - pip install GDAL==1.10.0 --global-option=build_ext --global-option="-I/usr/include/gdal"
-  - pip install -r requirements.txt
+  - izolation install GDAL==1.10.0 --global-option=build_ext --global-option="-I/usr/include/gdal"
+  - izolation install -r requirements.txt
 
 before_script:
     "python demo.py -d"
