--- a/pywps.cfg
+++ b/pywps.cfg
@@ -25,17 +25,28 @@ contact_role=pointOfContact
 [server]
 maxsingleinputsize=1mb
 maxrequestsize=3mb
-url=http://localhost:5000/wps
-outputurl=http://localhost:5000/outputs/
+url=http://localhost:5555/wps
+outputurl=http://localhost:5555/outputs/
 outputpath=outputs
-workdir=/tmp
+workdir=workdir
+wd_inp_subdir=inputs
+wd_out_subdir=outputs
 maxprocesses=10
-parallelprocesses=2
+parallelprocesses=6
+
+[processing]
+mode=docker
+port_min=5050
+port_max=5070
+docker_img=gdal_full_manual2
+dckr_inp_dir=/pywps-flask/data
+dckr_out_dir=/pywps-flask/outputs
 
 [logging]
 level=INFO
 file=logs/pywps.log
 database=sqlite:///logs/pywps-logs.sqlite3
+format=%(asctime)s] [%(levelname)s] file=%(pathname)s line=%(lineno)s module=%(module)s function=%(funcName)s %(message)s
 
 
 [grass]
