New docker compositions (alpine and ubuntu) with gdal support

--- a/docker/alpine/flask/Dockerfile
+++ b/docker/alpine/flask/Dockerfile
@@ -6,15 +6,15 @@ ARG XERCES_VERSION=3.2.0
 ARG PROCESSOR_N=4
 
 RUN apk update && apk add --no-cache \
-	git \
-	gcc \
-	bash \
-	openssh \
-	musl-dev  \
-	python3 \
+    git \
+    gcc \
+    bash \
+    openssh \
+    musl-dev  \
+    python3 \
     python3-dev \
-	libxml2-dev  \
-	libxslt-dev \
+    libxml2-dev  \
+    libxslt-dev \
     linux-headers \
     expat \
     expat-dev \
@@ -31,25 +31,27 @@ RUN apk add --no-cache \
 RUN wget http://www.apache.org/dist/xerces/c/3/sources/xerces-c-${XERCES_VERSION}.tar.gz -O /tmp/xerces-c-${XERCES_VERSION}.tar.gz && \
     tar xvf /tmp/xerces-c-${XERCES_VERSION}.tar.gz -C /tmp && \
     cd /tmp/xerces-c-${XERCES_VERSION} && \
-    CFLAGS="-O3 -march=native -Wall" CXXFLAGS=${CFLAGS} ./configure --prefix=/usr/local/src/xerces && \
+    LDFLAGS="-s" ./configure --prefix=/usr/local/src/xerces && \
     make -j $PROCESSOR_N install
 
 # Install GDAL
 RUN wget http://download.osgeo.org/gdal/${GDAL_VERSION}/gdal-${GDAL_VERSION}.tar.gz -O /tmp/gdal.tar.gz && \
 	tar xzf /tmp/gdal.tar.gz -C /tmp && \
 	cd /tmp/gdal-${GDAL_VERSION} && \
-        CFLAGS="-O3 -march=native" CXXFLAGS=${CFLAGS} LDFLAGS="-s"  ./configure --with-expat=yes --with-xerces=/opt/xerces --with-geos=yes \
+        LDFLAGS="-s"  ./configure --with-expat=yes --with-xerces=/opt/xerces --with-geos=yes \
 	&& make -j ${PROCESSOR_N} && make install
 
 RUN cd /tmp/gdal-${GDAL_VERSION}/swig/python \
 	&& python3 setup.py install
+
+RUN rm -rf /var/cache/apk/*
 
 RUN git clone https://github.com/geopython/pywps-flask.git
  
 WORKDIR /pywps-flask
 RUN pip3 install -r requirements.txt
  
-EXPOSE 5000 
+
 ENTRYPOINT ["/usr/bin/python3", "demo.py","-a"]
 
 #docker build -t pywps-flask . 
