--- a/docker/alpine/nginx/pywps.conf
+++ b/docker/alpine/nginx/pywps.conf
@@ -10,13 +10,12 @@ server {
 
      location /wps {
              # with try_files active there will be problems
-             #try_files $uri $uri/ =404;
 
              proxy_set_header Host $host;
              proxy_redirect          off;
              proxy_set_header        X-NginX-Proxy true;
              proxy_set_header X-Real-IP $remote_addr;
              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-             proxy_pass http://127.0.0.1:8081/;
+             proxy_pass http://pywps:8081/;
              }
 }
