--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ Werkzeug==0.10.4
 SQLAlchemy==1.0.15
 psutil==4.3.1
 docker
--e git+https://github.com/geopython/pywps.git@master#egg=pywps-master
+-e git+https://github.com/lazaa32/pywps.git@master#egg=pywps-master
