Config edited. Multiprocessing mode is set to processing by default

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -35,7 +35,7 @@ maxprocesses=10
 parallelprocesses=6
 
 [processing]
-mode=docker
+mode=multiprocessing
 port_min=5050
 port_max=5070
 docker_img=pywps_container
