Cosmetics, ultimate_question reverted back to status=false

--- a/pywps.cfg
+++ b/pywps.cfg
@@ -1,6 +1,6 @@
 [metadata:main]
 identification_title=PyWPS Demo server
-identification_abstract=PyWPS testing and development server. Do NOT use this server in production environement. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials.
+identification_abstract=PyWPS testing and development server. Do NOT use this server in production environment. You shall setup PyWPS as WSGI application for production. Please refer documentation for further detials.
 identification_keywords=WPS,GRASS,PyWPS, Demo, Dev
 identification_keywords_type=theme
 identification_fees=None
@@ -32,13 +32,13 @@ workdir=workdir
 wd_inp_subdir=inputs
 wd_out_subdir=outputs
 maxprocesses=10
-parallelprocesses=6
+parallelprocesses=10
 
 [processing]
-mode=multiprocessing
+mode=docker
 port_min=5050
 port_max=5070
-docker_img=pywps_container
+docker_img=container
 dckr_inp_dir=/pywps-flask/data
 dckr_out_dir=/pywps-flask/outputs
 
