--- a/pywps.cfg
+++ b/pywps.cfg
@@ -32,10 +32,10 @@ workdir=workdir
 wd_inp_subdir=inputs
 wd_out_subdir=outputs
 maxprocesses=10
-parallelprocesses=10
+parallelprocesses=2
 
 [processing]
-mode=docker
+mode=default
 port_min=5050
 port_max=5070
 docker_img=container
