--- a/pywps.cfg
+++ b/pywps.cfg
@@ -35,7 +35,7 @@ maxprocesses=10
 parallelprocesses=2
 
 [processing]
-mode=default
+mode=docker
 port_min=5050
 port_max=5070
 docker_img=container
