modified:   VERSION.txt 	modified:   docs/conf.py 	modified:   requirements.txt 	modified:   setup.py Bumpped version to 4.2.1

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ Shapely
 Werkzeug
 SQLAlchemy
 psutil
--e git+https://github.com/geopython/pywps.git@master#egg=pywps-master
+-e git+https://github.com/geopython/pywps.git@4.2.1#egg=pywps-4.2.1
