--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: python
+
+dist: xenial
+
 python:
   - "2.7"
   - "3.4"
@@ -10,7 +13,7 @@ git:
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gdal-bin libgdal-dev libgdal1h libgdal1-dev libgeos-dev python-dev python3-dev
-  - pip install GDAL==1.10.0 --global-option=build_ext --global-option="-I/usr/include/gdal"
+  - pip install GDAL==1.11.3 --global-option=build_ext --global-option="-I/usr/include/gdal"
   - pip install -r requirements.txt
 
 before_script:
