--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ git:
 
 install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gdal-bin libgdal1i libgdal1-dev libgal-dev libgeos-dev python-dev python3-dev
+  - sudo apt-get install -qq gdal-bin libgdal1i libgdal1-dev libgdal-dev libgeos-dev python-dev python3-dev
   - pip install GDAL==1.11.3 --global-option=build_ext --global-option="-I/usr/include/gdal"
   - pip install -r requirements.txt
 
